--- a/foundations/intro-to-css/01-css-methods/index.html
+++ b/foundations/intro-to-css/01-css-methods/index.html
@@ -4,11 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--external CSS method (separate CSS file)-->
+    <link rel="stylesheet" href="styles.css">
+
     <title>Methods for Adding CSS</title>
+
+    <!--internal CSS method -->
+    <style>
+      p {
+        color: white;
+        background-color: green;
+        font-family: 'Times New Roman', Times, serif;
+        font-size: 24px;
+        text-align: left;
+      }
+    </style>
   </head>
   <body>
     <div>Style me via the external method!</div>
     <p>I would like to be styled with the internal method, please.</p>
-    <button>Inline Method</button>
+    <!--inline CSS method (not recommended)-->
+    <button style="background-color: orange; font-size: 28px;">Inline Method</button>
   </body>
 </html>
